--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,6 +16,10 @@ body {
 	border-bottom: 1px solid #CCCCCC;
 }
 
+.container-fluid{
+  padding-bottom: 40px;
+}
+
 .footer {
   text-align: center;
   position: absolute;
@@ -50,4 +54,47 @@ body {
 .message{
   position: relative;
   right: 50%;
+}
+
+#searchInputView{
+  font-size: 5rem;
+}
+
+#inputAddOnView{
+  font-size: 3rem;
+}
+
+#dataTableOperator th,#dataTableOperator td, #dataTableOperator td button{
+  font-size: 3rem;
+}
+
+#ecnForm{
+  font-size: 1.5rem;
+}
+
+#fileDropDown{
+  position: relative;
+  top: -23px;
+  text-align: right;
+  color: #CCCCCC;
+
+}
+
+#fileDropDown span{
+    font-size: .8rem;
+  }
+
+.fileDropDownContainer{
+    height: 0;
+  }
+
+#createNewRevision{
+  margin-top: 20px;
+}
+.nav-item .active{
+  color: #0275d8;;
+}
+
+.ecnBtn{
+  padding: 10px 20px;
 }
